# Stratum2

./: .gitignore  CMakeLists.txt  CompileShader.cmake  LICENSE  README.md
src/: main.cpp
src/App/: BDPT.cpp  BDPT.hpp  Denoiser.cpp  Denoiser.hpp  FlyCamera.cpp  FlyCamera.hpp  Func.hpp  GpuHashGrid.cpp  GpuHashGrid.hpp  Gui.cpp  Gui.hpp  GuiProperty.hpp  ImageComparer.cpp  ImageComparer.hpp  Inspector.cpp  Inspector.hpp  Material.hpp  MaterialResources.hpp  Node.hpp  NonEuclidianRenderer.cpp  NonEuclidianRenderer.hpp  PathTracer.cpp  PathTracer.hpp  RasterRenderer.cpp  RasterRenderer.hpp  ReSTIRPT.cpp  ReSTIRPT.hpp  Renderer.hpp  Scene.cpp  Scene.hpp  SceneGraph.hpp  TestRenderer.cpp  TestRenderer.hpp  TinyPT.cpp  TinyPT.hpp  Tonemapper.cpp  Tonemapper.hpp  VCM.cpp  VCM.hpp
src/App/loaders/: load_assimp.cpp  load_gltf.cpp  load_mitsuba.cpp  load_obj.cpp  load_obj.hpp  load_serialized.cpp  load_serialized.hpp  load_volumes.cpp
src/Core/: Buffer.cpp  Buffer.hpp  CommandBuffer.cpp  CommandBuffer.hpp  DescriptorSets.hpp  Device.cpp  Device.hpp  DeviceResourcePool.cpp  DeviceResourcePool.hpp  Image.cpp  Image.hpp  Instance.cpp  Instance.hpp  Mesh.cpp  Mesh.hpp  Pipeline.cpp  Pipeline.hpp  PipelineContext.cpp  PipelineContext.hpp  Profiler.cpp  Profiler.hpp  ResourcePool.hpp  Shader.cpp  Shader.hpp  Swapchain.cpp  Swapchain.hpp  Window.cpp  Window.hpp  fwd.hpp  hash.hpp  hlslmath.hpp  utils.hpp
src/Shaders/common/: D3DX_DXGIFormatConvert.inl  bdpt_util.hlsli  bitfield.hlsli  bsdf.hlsli  common.hlsli  hashgrid.hlsli  image_value.hlsli  intersection.hlsli  light.hlsli  lights.hlsli  material.hlsli  medium.hlsli  microfacet.hlsli  noneuclid.hlsli  path.hlsli  path_defines.hlsli  rng.hlsli  scene.hlsli  shading_data.hlsli  vcm.hlsli
src/Shaders/compat/: bdpt.h  bitfield.h  common.h  denoiser.h  disney_data.h  environment.h  environment_image.h  filter_type.h  hlslcompat.h  image_compare.h  image_value.h  material.h  material_data.h  path_tracer.h  quatf.h  reservoir.h  scene.h  shading_data.h  tinypt.h  tonemap.h  transform.h  vcm.h
src/Shaders/kernels/: atrous.hlsl  bdpt.hlsl  convert_material.slang  convert_roughness.slang  copy_vertices.hlsl  estimate_variance.hlsl  hashgrid.slang  image_compare.hlsl  image_compare.slang  material_convert.hlsl  path_tracer.slang  path_vis.slang  raster_scene.slang  raster_scene_noneuclid.slang  restirpt.slang  roughness_convert.hlsl  temporal_accumulation.hlsl  test.hlsl  testrenderer.slang  tinypt.slang  tonemap.hlsl  tonemap.slang  vcm.slang  vcm_vis.slang
src/Shaders/kernels/restirpt/: common.slang  di.slang  gi.slang  gi_ssmis.slang  path.slang  pg.slang  pt.slang  rcv.slang  rcv_vis.slang  restirpt.slang
src/Shaders/kernels/svgf/: atrous.hlsl  atrous.slang  estimate_variance.hlsl  estimate_variance.slang  temporal_accumulation.hlsl  temporal_accumulation.slang
src/Shaders/materials/: bsdf.hlsli  disney.hlsli  disney_clearcoat.hlsli  disney_diffuse.hlsli  disney_glass.hlsli  disney_material.hlsli  disney_metal.hlsli  disney_sheen.hlsli  environment.hlsli  lambertian.hlsli  medium.hlsli  rough_plastic.hlsli
src/Utils/: common.hpp  fwd.hpp  hash.hpp  hlslmath.hpp  math.hpp  utils.hpp
